# C-

./: .clang-format  .gitignore  CMakeLists.txt  README.md
docs/: 6-week-roadmap.md  architecture.md  interview-pitch.md  labs.md  study-guide.md
include/taskhub/: api_router.h  errors.h  http_server.h  sqlite_task_repository.h  task.h  task_repository.h  task_service.h
src/: api_router.cpp  http_server.cpp  main.cpp  sqlite_task_repository.cpp  task.cpp  task_service.cpp
tests/: taskhub_tests.cpp
